Mega Commit: Large Option Handling / Parameterization rewrite